# wonderfulr-d7e0-texdesk

./: .env.example  .env.production  .gitignore  .plan  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_store.sql
src-tauri/src/: compile.rs  config.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/store/: mod.rs
src-tauri/src/watcher/: mod.rs
src/compile/: logParser.ts
src/components/compile/: CompileLogPanel.tsx
src/components/editor/: CodeMirrorEditor.tsx
src/components/file-tree/: FileTree.tsx
src/components/layout/: ThreePaneLayout.tsx
src/components/preview/: PdfPreview.tsx
src/components/snippets/: SnippetPicker.tsx  snippetFiltering.test.ts  snippetFiltering.ts
src/components/templates/: TemplateManager.tsx
src/config/: appConfig.ts  useAppConfig.ts  useStoreStatus.ts
src/editor/: editorErgonomics.ts  latexHighlighting.ts  snippetInsertion.test.ts  snippetInsertion.ts
src/errors/: appError.test.ts  appError.ts
src/ipc/: client.ts
src/state/: compileState.ts  documentState.ts  layoutState.ts  workspaceSync.ts
src/types/: compile.ts  config.ts  fs.ts  persistence.ts  snippets.ts  store.ts  sync.ts  templates.ts
