[package]
name = "wonderfulr-d7e0-texdesk"
version = "0.1.0"
description = "A local desktop LaTeX workspace."
authors = ["mtplayground"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.5", features = [] }
